--- a/src/app/todo-list/todo-list.component.html
+++ b/src/app/todo-list/todo-list.component.html
@@ -9,3 +9,48 @@
 </ul>
 
 </div>
+
+
+<!-- Switch  -->
+
+<!-- 
+<input type="text" [(ngModel)]="op">
+
+<div [ngSwitch]="op" >
+    <div *ngSwitchCase="'+' ">{{num1}}+{{num2}}={{num1+num2}}</div>
+    <div *ngSwitchCase="'-' ">{{num1}}-{{num2}}={{num1-num2}}</div>
+    <div *ngSwitchCase="'* '">
+        {{num1}}*{{num2}}={{num1*num2}}
+    </div>
+    <div *ngSwitchCase="'/'">
+        {{num1}}/{{num2}}={{num1/num2}}
+    </div>
+    <div *ngSwitchDefault="'n'">
+        Invaild
+    </div>
+
+
+</div>
+
+
+
+
+ -->
+
+
+ <!-- Pipe Topic example uppercase to lowercase -->
+
+ <!-- <h1>{{name|currency: 'INR':'symbol'}}</h1> -->
+
+
+ <!-- <h1>{{person|json}}</h1> -->
+ <!-- <h1>{{date |date:'dd/MM/yy'}}</h1> -->
+
+ <!-- <h1>{{percentage| percent}}</h1> -->
+
+
+
+
+
+
+
